# simpleProx

./: CMakeLists.txt  README.md  btstack_config.h  server.c  server.h  simpleProx.gatt  simpleProx.h  startup.c
